--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -1,5 +1,9 @@
-public without sharing virtual class RollupFullBatchRecalculator extends RollupFullRecalcProcessor implements Database.Stateful, Database.RaisesPlatformEvents {
+public without sharing virtual class RollupFullBatchRecalculator extends RollupFullRecalcProcessor {
   private final RollupState state = new RollupState();
+  private Database.Cursor cursor;
+  private Integer currentPosition = 0;
+
+  private static final Integer DEFAULT_CHUNK_SIZE = 500;
 
   public RollupFullBatchRecalculator(
     String queryString,
@@ -10,6 +14,7 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
     RollupFullRecalcProcessor postProcessor
   ) {
     super(RollupQueryBuilder.Current.getAllRowSafeQuery(calcItemType, queryString), invokePoint, rollupMetas, calcItemType, recordIds, postProcessor);
+    this.rollupControl.BatchChunkSize__c = this.rollupControl.BatchChunkSize__c ?? DEFAULT_CHUNK_SIZE;
   }
 
   public override RollupState getState() {
@@ -36,6 +41,38 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
   }
 
   protected virtual override String startAsyncWork() {
-    return this.startBatchProcessor();
+    if (this.finalizer != null) {
+      while (this.cabooses.isEmpty() == false) {
+        this.finalizer.addCaboose(this.cabooses.remove(0));
+      }
+    }
+    this.cursor = this.cursor ?? this.preStart().getCursor();
+
+    Integer countOfRecordsToReturn = this.rollupControl.BatchChunkSize__c.intValue();
+    if (countOfRecordsToReturn + this.currentPosition > this.cursor.getNumRecords()) {
+      countOfRecordsToReturn = this.cursor.getNumRecords() - this.currentPosition;
+    }
+    this.calcItems = this.cursor.fetch(this.currentPosition, countOfRecordsToReturn);
+    this.currentPosition += countOfRecordsToReturn;
+    return super.startAsyncWork();
+  }
+
+  protected override RollupFinalizer getFinalizer() {
+    return new FullRecalcFinalizer(this);
+  }
+
+  private class FullRecalcFinalizer extends RollupFinalizer {
+    private final RollupFullBatchRecalculator conductor;
+    public FullRecalcFinalizer(RollupFullBatchRecalculator conductor) {
+      this.conductor = conductor;
+    }
+
+    public override void handleSuccess() {
+      if (this.conductor.currentPosition < this.conductor.cursor.getNumRecords()) {
+        this.conductor.startAsyncWork();
+      } else {
+        this.conductor.finish();
+      }
+    }
   }
 }
