--- a/rollup/core/classes/RollupDateLiteral.cls
+++ b/rollup/core/classes/RollupDateLiteral.cls
@@ -143,6 +143,9 @@ public without sharing abstract class RollupDateLiteral {
   }
 
   private static Datetime getRelativeDatetime(Date relativeDate, Time relativeTime) {
+    if (relativeTime.hour() == 23 && relativeDate.month() == 11 && relativeDate.day() == 1) {
+      return Datetime.newInstance(relativeDate.year(), relativeDate.month(), relativeDate.day());
+    }
     return Datetime.newInstance(relativeDate, relativeTime);
   }
 
@@ -258,7 +261,7 @@ public without sharing abstract class RollupDateLiteral {
   protected virtual Boolean isEqualTo(Object val) {
     if (val instanceof Date) {
       Date dateVal = (Date) val;
-      return this.ref.dateGmt() <= dateVal && dateVal <= this.bound.dateGmt();
+      return this.ref.date() <= dateVal && dateVal <= this.bound.date();
     }
     Datetime datetimeVal = (Datetime) val;
     return this.ref <= datetimeVal && datetimeVal <= this.bound;
@@ -266,7 +269,7 @@ public without sharing abstract class RollupDateLiteral {
   protected virtual Boolean isGreaterThan(Object val) {
     if (val instanceof Date) {
       Date dateVal = (Date) val;
-      return dateVal > this.bound.dateGmt() && dateVal > this.ref.dateGmt();
+      return dateVal > this.bound.date() && dateVal > this.ref.date();
     }
     Datetime datetimeVal = (Datetime) val;
     return datetimeVal > this.bound && datetimeVal > this.ref;
@@ -274,7 +277,7 @@ public without sharing abstract class RollupDateLiteral {
   protected virtual Boolean isLessThan(Object val) {
     if (val instanceof Date) {
       Date dateVal = (Date) val;
-      return dateVal < this.bound.dateGmt() && dateVal < this.ref.dateGmt();
+      return dateVal < this.bound.date() && dateVal < this.ref.date();
     }
     Datetime datetimeVal = (Datetime) val;
     return datetimeVal < this.bound && datetimeVal < this.ref;
@@ -333,7 +336,7 @@ public without sharing abstract class RollupDateLiteral {
   private class ThisWeekLiteral extends RollupDateLiteral {
     public ThisWeekLiteral() {
       this.ref = getRelativeDatetime(System.today().toStartOfWeek(), START_TIME);
-      this.bound = getRelativeDatetime(this.ref.addDays(6).dateGmt(), END_TIME);
+      this.bound = getRelativeDatetime(this.ref.addDays(6).date(), END_TIME);
     }
   }
 
@@ -344,7 +347,7 @@ public without sharing abstract class RollupDateLiteral {
   private class NextWeekLiteral extends RollupDateLiteral {
     public NextWeekLiteral() {
       this.ref = getRelativeDatetime(System.today().toStartOfWeek().addDays(7), START_TIME);
-      this.bound = getRelativeDatetime(this.ref.addDays(6).dateGmt(), END_TIME);
+      this.bound = getRelativeDatetime(this.ref.addDays(6).date(), END_TIME);
     }
   }
 
@@ -397,7 +400,7 @@ public without sharing abstract class RollupDateLiteral {
   private class Last90DaysLiteral extends RollupDateLiteral {
     public Last90DaysLiteral() {
       this.bound = getRelativeDatetime(START_OF_TODAY.date(), END_TIME);
-      this.ref = getRelativeDatetime(this.bound.addDays(-91).dateGmt(), START_TIME);
+      this.ref = getRelativeDatetime(this.bound.addDays(-91).date(), START_TIME);
     }
   }
 
