--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -5,6 +5,16 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
 
   private static final Integer DEFAULT_CHUNK_SIZE = 500;
 
+  public class NonResettingBulkFullRecalc extends RollupFullBatchRecalculator {
+    public NonResettingBulkFullRecalc(String queryString, InvocationPoint invokePoint, List<Rollup__mdt> rollupMetas, SObjectType calcItemType) {
+      super(queryString, invokePoint, rollupMetas, calcItemType, new Set<String>(), null);
+    }
+
+    public override Boolean getShouldResetParentRecordsDuringRecalculation() {
+      return false;
+    }
+  }
+
   public RollupFullBatchRecalculator(
     String queryString,
     InvocationPoint invokePoint,
